--- a/copymoon.net/dashboard/admin/trader.html
+++ b/copymoon.net/dashboard/admin/trader.html
@@ -945,7 +945,7 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
-                                                  <th class="align-middle"> Signal strength:</th>
+                                                  <th class="align-middle"> Followers:</th>
                                                   <td>
                                                       <input class="form-control" value=""  id="signal">
                                                   </td>
@@ -957,25 +957,25 @@
                                                     </td>
                                                 </tr>-->
                                                 <tr>
-                                                    <th class="align-middle">Winrate:</th>
+                                                    <th class="align-middle">Risk Score:</th>
                                                     <td>
                                                         <input class="form-control" name="name" value="" id="risk">
                                                     </td>
                                                 </tr>
 												  <tr>
-                                                    <th class="align-middle">Maximum Drawdown:</th>
+                                                    <th class="align-middle">Trades:</th>
                                                     <td>
                                                         <input class="form-control" name="name" id="drawdown">
                                                     </td>
                                                 </tr>
                                                 <tr>
-                                                  <th class="align-middle">Strategy:</th>
+                                                  <th class="align-middle">Confidence:</th>
                                                   <td>
                                                       <input class="form-control" name="name" id="strategy">
                                                   </td>
                                               </tr>
                                               <tr>
-                                                <th class="align-middle">Profit:</th>
+                                                <th class="align-middle">Profit rate:</th>
                                                 <td>
                                                     <input class="form-control" name="name" id="profit">
                                                 </td>
@@ -983,7 +983,7 @@
                                           
                        
                                                 <tr>
-                                                    <th class="align-middle">Trading Frequency</th>
+                                                    <th class="align-middle">Country</th>
                                                     <td>
                                                         <input   class="form-control" id="frequency" >
                                                     </td>
