--- a/copymoon.net/dashboard/admin/traderinfo.html
+++ b/copymoon.net/dashboard/admin/traderinfo.html
@@ -942,19 +942,26 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
-                                                  <th class="align-middle">Signal strength:</th>
+                                                  <th class="align-middle">Country :</th>
+                                                  <td>
+                                                      <input class="form-control" name="name" id="frequency">
+                                                  </td>
+                                              </tr>
+                        
+                                                <tr>
+                                                  <th class="align-middle">Followers:</th>
                                                   <td>
                                                       <input class="form-control" name="name" value="" id="signal">
                                                   </td>
                                               </tr>
 												  <tr>
-                                                    <th class="align-middle">Strategy :</th>
+                                                    <th class="align-middle">Confidence :</th>
                                                     <td>
                                                         <input class="form-control" name="name" id="strategy">
                                                     </td>
                                                 </tr>
                                                 <tr>
-                                                  <th class="align-middle">Winrate:</th>
+                                                  <th class="align-middle">Risk Score:</th>
                                                   <td>
                                                       <input class="form-control" name="name" id="winrate">
                                                   </td>
@@ -974,7 +981,7 @@
                                                   </td>
                                               </tr>
                                                 <tr>
-                                                  <th class="align-middle">Frequency</th>
+                                                  <th class="align-middle">Trades</th>
                                                   <td>
                                                       <input   class="form-control" id="frequency" >
                                                   </td>
