--- a/copymoon.net/dashboard/login.html
+++ b/copymoon.net/dashboard/login.html
@@ -246,7 +246,8 @@ function checkform() {
              loginUser({ email, password });
          });
      </script>
-    <script src="./login_files/jquery.min.js.download"></script>
+    <script src="./login_files/"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  
     <script src="./login_files/bootstrap.bundle.min.js.download"></script>
     <script src="./login_files/waves.js.download"></script>
     <script src="./login_files/feather.min.js.download"></script>
