--- a/copymoon.net/dashboard/admin/edit.html
+++ b/copymoon.net/dashboard/admin/edit.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0039)https://dekmaroptions.com/update-profile -->
+<!-- saved from url=(0039)https://OrbitalCopyTrading.com/update-profile -->
 <html lang="en">
 
 <head>
@@ -14,7 +14,7 @@
   <!-- ================== END BASE CSS STYLE ================== -->
   <!-- ================== BEGIN PAGE LEVEL CSS STYLE ================== -->
   <link href="./edit_files/jquery-jvectormap.css" rel="stylesheet">
-  <link href="https://dekmaroptions.com/dashboard/assets/plugins/nvd3/build/nv.d3.css%22%20rel=%22stylesheet">
+  <link href="https://OrbitalCopyTrading.com/dashboard/assets/plugins/nvd3/build/nv.d3.css%22%20rel=%22stylesheet">
   <link href="./edit_files/daterangepicker.css" rel="stylesheet">
   <script src="./edit_files/"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   
@@ -8365,10 +8365,10 @@
   <link href="./edit_files/switchery.min.css" rel="stylesheet">
   <script src="./edit_files/kjqgpmy1s4bui5fjetax3qgw5tm5uq41.js.download" async=""></script>
   <!-- ================== END PAGE LEVEL CSS STYLE ================== -->
-  <meta property="og:title" content="dekmaroptions LTD.">
+  <meta property="og:title" content="OrbitalCopyTrading LTD.">
   <meta property="og:description" content="Advanced Asset Management">
-  <meta property="og:image" content="https://dekmaroptions.com/images/facebook.jpg">
-  <meta property="og:url" content="https://dekmaroptions.com">
+  <meta property="og:image" content="https://OrbitalCopyTrading.com/images/facebook.jpg">
+  <meta property="og:url" content="https://OrbitalCopyTrading.com">
   <meta property="og:type" content="website">
   <link href="../img/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="../img/favicon.png" rel="apple-touch-icon">
@@ -9118,7 +9118,7 @@
     <div id="header" class="header navbar-default">
       <!-- begin navbar-header -->
       <div class="navbar-header">
-        <h3>Dekmaroptions</h3>      
+        <h3>OrbitalCopyTrading</h3>      
        
          <button type="button" class="navbar-toggle" data-click="sidebar-toggled">
           <span class="icon-bar"></span>
@@ -9130,7 +9130,7 @@
       <!-- begin header-nav -->
       <ul class="navbar-nav navbar-right">
         <li class="navbar-form">
-          <form action="https://dekmaroptions.com/update-profile" method="POST" name="search_form"><input type="hidden"
+          <form action="https://OrbitalCopyTrading.com/update-profile" method="POST" name="search_form"><input type="hidden"
               name="form_id" value="16192493844200"><input type="hidden" name="form_token"
               value="d87f2db94eacfc63c8edf01222de01ad">
             <div class="form-group">
@@ -9189,7 +9189,7 @@
           </form>
         </li>
         <li class="dropdown navbar-user">
-          <!--  <a href="https://dekmaroptions.com/update-profile#" class="dropdown-toggle" data-toggle="dropdown"> <img src="./edit_files/myuser.jpg" alt="">
+          <!--  <a href="https://OrbitalCopyTrading.com/update-profile#" class="dropdown-toggle" data-toggle="dropdown"> <img src="./edit_files/myuser.jpg" alt="">
                 <span class="d-none d-md-inline" id="accountname"></span> <b class="caret"></b> </a>-->
           <div class="dropdown-menu dropdown-menu-right">
             <a href="edit.html" class="dropdown-item"><i class="fas fa-user" aria-hidden="true"></i>Edit
@@ -9588,7 +9588,7 @@
 
       const response = await $.ajax({
         type: "GET",
-        url: `https://dekmar-render-zd92.onrender.com/users/${userFromLS.email}`,
+        url: `https://moon-heroku-31de2f2c9bf4.herokuapp.com/users/${userFromLS.email}`,
         dataType: "json",
         timeout: 30000,
         success: async function (data) {
@@ -9624,7 +9624,7 @@
 
       const response = await $.ajax({
         type: "PUT",
-        url: `https://dekmar-render-zd92.onrender.com/users/${currentUser._id}/profile/update`,
+        url: `https://moon-heroku-31de2f2c9bf4.herokuapp.com/users/${currentUser._id}/profile/update`,
         dataType: "json",
         data: { firstName, lastName, email },
         timeout: 30000,
@@ -9657,7 +9657,7 @@
 
       const response = await $.ajax({
         type: "PUT",
-        url: `https://dekmar-render-zd92.onrender.com/users/${currentUser._id}/accounts/update`,
+        url: `https://moon-heroku-31de2f2c9bf4.herokuapp.com/users/${currentUser._id}/accounts/update`,
         dataType: "json",
         data: { 'values': JSON.stringify(cummulative) },
         timeout: 30000,
