--- a/copymoon.net/dashboard/login.html
+++ b/copymoon.net/dashboard/login.html
@@ -2,12 +2,12 @@
 <!-- saved from url=(0033)./user/login.html -->
 <html lang="en"><!-- Mirrored from mannatthemes.com/dastyle/default/auth-register.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 07 Oct 2020 06:55:22 GMT --><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
-    <title>dekmaroptions.com</title>
+    <title>OrbitalCopyTrading.com</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
     <meta content="" name="description">
     <meta content="" name="author"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"><!-- App favicon -->
-    <link rel="shortcut icon" href="https://dekmaroptions.com/images/favicon.png">
+    <link rel="shortcut icon" href="https://OrbitalCopyTrading.com/images/favicon.png">
     <link href="./login_files/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="./login_files/icons.min.css" rel="stylesheet" type="text/css">
     <link href="./login_files/app.min.css" rel="stylesheet" type="text/css">
@@ -144,7 +144,7 @@ function checkform() {
                             
                         </div>
                         <!--end card-body-->
-                        <div class="card-body bg-light-alt text-center"><span class="text-muted d-none d-sm-inline-block">dekmaroptions.com ©
+                        <div class="card-body bg-light-alt text-center"><span class="text-muted d-none d-sm-inline-block">OrbitalCopyTrading.com ©
                                 2023</span></div>
                     </div>
                     <!--end card-->
