--- a/copymoon.net/dashboard/dashboard.html
+++ b/copymoon.net/dashboard/dashboard.html
@@ -3962,12 +3962,13 @@
               </svg></div>
             <div class="sidebar__text">Copy Trading</div>
           </a>
-           <a class="sidebar__item " href="livetrade.html"></a>
+          <a class="sidebar__item " href="livetrade.html">
             <div class="sidebar__icon"><svg class="icon icon-chart">
                 <use xlink:href="http://orbitalcopytrading.com/dashcss/assets/newBack/img/sprite.svg#icon-chart"></use>
               </svg></div>
             <div class="sidebar__text">Live Trade</div>
           </a>
+          
           <a class="sidebar__item " href="copytransactions.html">
             <div class="sidebar__icon"><svg class="icon icon-chart">
                 <use xlink:href="http://orbitalcopytrading.com/dashcss/assets/newBack/img/sprite.svg#icon-chart"></use>
