--- a/copymoon.net/dashboard/deposithistory.html
+++ b/copymoon.net/dashboard/deposithistory.html
@@ -2243,7 +2243,7 @@ body.dark .alert-warning {
               <div class="sidebar__icon"><svg class="icon icon-chart"><use xlink:href="http://orbitalcopytrading.com/dashcss/assets/newBack/img/sprite.svg#icon-arrow-up-right-square"></use></svg></div>
               <div class="sidebar__text">Live Trade</div>
             </a>
-             <a class="sidebar__item " href="copytransactions.html">
+             <a class="sidebar__item active " href="copytransactions.html">
             <div class="sidebar__icon"><svg class="icon icon-chart">
                 <use xlink:href="http://orbitalcopytrading.com/dashcss/assets/newBack/img/sprite.svg#icon-chart"></use>
               </svg></div>
