light mode logo

--- a/copymoon.net/dashboard/dashboard.html
+++ b/copymoon.net/dashboard/dashboard.html
@@ -11,7 +11,7 @@
   <meta name="description" content="Follow Lead Traders and copy their trading activity with Expert CopyTrading">
   <meta name="keywords" content="investment">
   <link rel="shortcut icon" href="http://orbitalcopytrading.com/assets/images/logoIcon/favicon.png" type="image/x-icon">
-
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <link rel="apple-touch-icon" href="./dashboard_files/logo.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -3887,7 +3887,7 @@
           <center><img class="sidebar__pic sidebar__pic_light" src="./dashboard_files/logo_2.png" alt=""
               width="70%"><img class="sidebar__pic sidebar__pic_dark" src="./dashboard_files/logo.png" alt=""
               width="70%"></center>
-        </a><button class="sidebar__toggle"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
+        </a><button class="sidebar__toggle" ><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
             stroke-width="2" stroke-linecap="round" stroke-linejoin="round" viewBox="0 0 24 24">
             <path d="M22 12H3" stroke="#11142d"></path>
             <g stroke="#808191">
