--- a/copymoon.net/dashboard/livetrade.html
+++ b/copymoon.net/dashboard/livetrade.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Follow Lead Traders and copy their trading activity with Expert CopyTrading">
     <meta name="keywords" content="investment">
     <link rel="shortcut icon" href="http://orbitalcopytrading.com/assets/images/logoIcon/favicon.png" type="image/x-icon">
-
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
     <link rel="apple-touch-icon" href="./livetrade_files/logo.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
