--- a/copymoon.net/dashboard/deposit.html
+++ b/copymoon.net/dashboard/deposit.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Follow Lead Traders and copy their trading activity with Expert CopyTrading">
     <meta name="keywords" content="investment">
     <link rel="shortcut icon" href="http://orbitalcopytrading.com/assets/images/logoIcon/favicon.png" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Bootstrap JS (for dropdowns and navbar collapse) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
@@ -2282,7 +2282,7 @@ ul {
                                             <ul class="list-group">
                                                 <li class="list-group-item d-flex justify-content-between">
                                                     <span>Limit</span>
-                                                    <span><span class="min fw-bold">1000</span> USD - <span class="max fw-bold">1000000</span> USD</span>
+                                                    <span><span class="min fw-bold">500</span> USD - <span class="max fw-bold">1000000</span> USD</span>
                                                 </li>
                                                 <li class="list-group-item d-flex justify-content-between">
                                                     <span>Charge</span>
