--- a/copymoon.net/dashboard/dashboard.html
+++ b/copymoon.net/dashboard/dashboard.html
@@ -3994,7 +3994,7 @@
           </a>
 
           <a class="sidebar__item " href="../user/login.html">
-            <div class="sidebar__icon"><i class="fas fa-sign-out-alt"  style="color: white;"></i></div>
+            <div class="side_icon"><i class="fas fa-sign-out-alt"  style="color: white;"></i></div>
             <div class="sidebar__text">Logout</div>
           </a>
 
@@ -4510,15 +4510,11 @@
                   <div class="wallets__item show__mobile"
                     style="display: flex; justify-content: space-around!important;">
                     <a href="withdraw.html" class="wallets__btn btn btn_blue">
-                      <svg class="icon">
-                        <use xlink:href="http://orbitalcopytrading.com/dashcss/assets/newBack/img/sprite.svg#icon-withdraw"></use>
-                      </svg>
+                      <i class="fas fa-arrow-circle-up"></i>
                       <span class="btn__text">Withdraw</span>
                     </a>
                     <a href="deposit.html" class="wallets__btn btn btn_border prev_button">
-                      <svg class="icon">
-                        <use xlink:href="http://orbitalcopytrading.com/dashcss/assets/newBack/img/sprite.svg#icon-deposit"></use>
-                      </svg>
+                      <i class="fas fa-arrow-circle-down"></i>
                       <span class="btn__text">Deposit</span>
                     </a>
                   </div>
