--- a/copymoon.net/dashboard/traderproftrash.html
+++ b/copymoon.net/dashboard/traderproftrash.html
@@ -2283,7 +2283,7 @@ body.dark .alert-warning {
           </a>
 
           <a class="sidebar__item " href="../user/login.html">
-            <div class="sidebar__icon"><i class="fas fa-sign-out-alt"  style="color: white;"></i></div>
+            <div class="side_icon"><i class="fas fa-sign-out-alt"  style="color: white;"></i></div>
             <div class="sidebar__text">Logout</div>
           </a>
 
