--- a/copymoon.net/dashboard/kyc.html
+++ b/copymoon.net/dashboard/kyc.html
@@ -3914,12 +3914,12 @@
             <div class="sidebar__text">Home</div>
           </a>
 
-          <a class="sidebar__item  " href="traders.html">
+           <a class="sidebar__item  " href="traders.html">
             <div class="side_icon"><i class="fas fa-clone"  style="color: white;"></i></div>
             <div class="sidebar__text">Copy Traders</div>
           </a>
 
-          <a class="sidebar__item  " href="./traders.html">
+          <a class="sidebar__item  " href="./copytransactions.html">
             <div class="side_icon"><i class="fas fa-sync-alt"  style="color: white;"></i></div>
             <div class="sidebar__text">Copy Trading</div>
           </a>
@@ -3952,7 +3952,7 @@
           </a>
 
           <a class="sidebar__item " href="../user/login.html">
-            <div class="sidebar__icon"><i class="fas fa-sign-out-alt"  style="color: white;"></i></div>
+            <div class="side_icon"><i class="fas fa-sign-out-alt"  style="color: white;"></i></div>
             <div class="sidebar__text">Logout</div>
           </a>
 
