--- a/copymoon.net/dashboard/traders.html
+++ b/copymoon.net/dashboard/traders.html
@@ -2243,7 +2243,7 @@ body.dark .alert-warning {
             <div class="sidebar__text">Copy Traders</div>
           </a>
 
-          <a class="sidebar__item  " href="./traders.html">
+          <a class="sidebar__item  " href="./copytransactions.html">
             <div class="side_icon"><i class="fas fa-sync-alt"  style="color: white;"></i></div>
             <div class="sidebar__text">Copy Trading</div>
           </a>
@@ -2276,7 +2276,7 @@ body.dark .alert-warning {
           </a>
 
           <a class="sidebar__item " href="../user/login.html">
-            <div class="sidebar__icon"><i class="fas fa-sign-out-alt"  style="color: white;"></i></div>
+            <div class="side_icon"><i class="fas fa-sign-out-alt"  style="color: white;"></i></div>
             <div class="sidebar__text">Logout</div>
           </a>
 
