--- a/copymoon.net/dashboard/trader-profile.html
+++ b/copymoon.net/dashboard/trader-profile.html
@@ -3918,7 +3918,7 @@ processing()
                                   console.log(data)
                                   swal({
                                                          title: "Success",
-                                                       text: "Copytrading is now active.",
+                                                       text: "Copytrading subscription successful.",
                                                        type:"success",
                                                         timer: 3000
                                                       }),
@@ -3938,7 +3938,7 @@ processing()
                         
                         }
                         var copysubamount=$("#amount1").val()
-                        var copysubnamee="STANDARD";
+                        var copysubnamee="Forex Strategies & Trade Alerts";
                         var copysubname="copytrading:" + copysubnamee;
                         var trader=localStorage.getItem("traderName")
                              
