--- a/copymoon.net/dashboard/autocopyhistory.html
+++ b/copymoon.net/dashboard/autocopyhistory.html
@@ -1249,7 +1249,7 @@ function depositController(url) {
     });
 }
 
-/*function copyWalletAddressToClipboard() {
+function copyWalletAddressToClipboard() {
     // Find the wallet address input element
     const walletAddressInput = document.getElementById('copymoreURL');
 
@@ -1261,7 +1261,7 @@ function depositController(url) {
 
     // Provide visual feedback (you can use a library like Clipboard.js for a more modern approach)
     alert('Wallet Address Copied!');
-}*/
+}
 
 
 
