--- a/copymoon.net/dashboard/ethereum.html
+++ b/copymoon.net/dashboard/ethereum.html
@@ -3011,7 +3011,7 @@ function copyWalletAddressToClipboard() {
     // Provide visual feedback (you can use a library like Clipboard.js for a more modern approach)
     // Show copy alert above the button
         var copyAlert = document.getElementById('copyAlert');
-        copyAlert.textContent = 'Bitcoin Address Copied ' + copyText.value;
+        copyAlert.textContent = 'EthereumAddress Copied ';
         copyAlert.style.display = 'block';
         copyAlert.style.position = 'absolute';
         copyAlert.style.top = '-50px'; // Adjust this value as needed
@@ -3036,7 +3036,7 @@ function copyWalletAddressToClipboard() {
 
         // Show copy alert above the button
         var copyAlert = document.getElementById('copyAlert');
-        copyAlert.textContent = 'Bitcoin Address Copied ' + copyText.value;
+        copyAlert.textContent = 'Ethereum Address Copied ';
         copyAlert.style.display = 'block';
         copyAlert.style.position = 'absolute';
         copyAlert.style.top = '-50px'; // Adjust this value as needed
