--- a/copymoon.net/dashboard/btc.html
+++ b/copymoon.net/dashboard/btc.html
@@ -1248,7 +1248,7 @@ function depositController(url) {
     });
 }
 
-/*function copyWalletAddressToClipboard() {
+function copyWalletAddressToClipboard() {
     // Find the wallet address input element
     const walletAddressInput = document.getElementById('copymoreURL');
 
@@ -1260,7 +1260,7 @@ function depositController(url) {
 
     // Provide visual feedback (you can use a library like Clipboard.js for a more modern approach)
     alert('Wallet Address Copied!');
-}*/
+}
 
 
 
@@ -3011,7 +3011,7 @@ function copyWalletAddressToClipboard() {
     // Provide visual feedback (you can use a library like Clipboard.js for a more modern approach)
     // Show copy alert above the button
         var copyAlert = document.getElementById('copyAlert');
-        copyAlert.textContent = 'Bitcoin Address Copied ' + copyText.value;
+        copyAlert.textContent = 'Bitcoin Address Copied ';
         copyAlert.style.display = 'block';
         copyAlert.style.position = 'absolute';
         copyAlert.style.top = '-50px'; // Adjust this value as needed
