--- a/copymoon.net/dashboard/deposit.html
+++ b/copymoon.net/dashboard/deposit.html
@@ -2282,7 +2282,7 @@ ul {
                                             <ul class="list-group">
                                                 <li class="list-group-item d-flex justify-content-between">
                                                     <span>Limit</span>
-                                                    <span><span class="min fw-bold">500</span> USD - <span class="max fw-bold">1000000</span> USD</span>
+                                                    <span><span class="min fw-bold">500</span> USD - <span class="max fw-bold">~</span> USD</span>
                                                 </li>
                                                 <li class="list-group-item d-flex justify-content-between">
                                                     <span>Charge</span>
